--- a/package.json
+++ b/package.json
@@ -5,18 +5,16 @@
   "dependencies": {},
   "devDependencies": {
     "browser-sync": "^2.15.0",
-    "css-mqpacker": "^5.0.1",
     "gulp": "^3.9.1",
     "gulp-autoprefixer": "^3.1.1",
+    "gulp-compile-handlebars": "^0.6.1",
     "gulp-csso": "^2.0.0",
     "gulp-data": "^1.2.1",
     "gulp-handlebars": "^4.0.0",
     "gulp-image-optimization": "^0.1.3",
-    "gulp-nunjucks": "^2.2.0",
-    "gulp-nunjucks-render": "^2.0.0",
-    "gulp-postcss": "^6.1.1",
     "gulp-sass": "^2.3.2",
     "gulp-svg-sprite": "^1.3.6",
+    "gulp-uglify": "^2.0.0",
     "gulp-watch": "^4.3.9"
   },
   "scripts": {
